--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,11 @@
             <version>1.0.0</version>
         </dependency>
         <dependency>
+            <groupId>byx.container.extension</groupId>
+            <artifactId>byx-container-extension-jdbc</artifactId>
+            <version>1.0.0</version>
+        </dependency>
+        <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-api</artifactId>
             <version>5.7.0</version>
